--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-ISC_IAM_IMAGE=intersystems/iam:0.34-1-1
+ISC_IAM_IMAGE=intersystems/iam:1.5.0.9-4
 ISC_IRIS_URL=http://IAM:1234@irisA:52773/api/iam/license
+ISC_CA_CERT=
