--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-ISC_IAM_IMAGE=intersystems/iam:1.5.0.9-4
+ISC_IAM_IMAGE=containers.intersystems.com/intersystems/iam:2.3.3.2-1
 ISC_IRIS_URL=http://IAM:1234@irisA:52773/api/iam/license
 ISC_CA_CERT=
