webterminal link added to vs settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
         },
         "ns": "WEBINAR",
         "port": 52773,
-        "host": "localhost"
+        "host": "localhost",
+        "links": {
+            "$(terminal) WebTerminal": "${serverUrl}/terminal/?ns=${ns}${serverAuth}"
+        }
     }
 }
