--- a/iam/docker-compose.yml
+++ b/iam/docker-compose.yml
@@ -44,6 +44,12 @@ services:
       KONG_ADMIN_GUI_URL: http://localhost:8002
       ISC_IRIS_URL: ${ISC_IRIS_URL}
       ISC_CA_CERT: ${ISC_CA_CERT}
+
+      # RBAC configuration
+      #KONG_ENFORCE_RBAC: 'on'
+      #KONG_ADMIN_GUI_AUTH: 'basic-auth'
+      #KONG_ADMIN_GUI_SESSION_CONF: '{ "secret":"secret", "cookie_lifetime":30000, "cookie_renew":20000, "cookie_name":"kong_cookie", "cookie_secure":false, "cookie_samesite": "off" }'
+
     links:
       - db:db
     ports:
